Fix typo in intro text
Fix the spelling of "development" in the intro sequence. Also,
emoticon

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         // Commands that will be typed out
         const commands = [
           "hello world!",
-          "website still under developement, maybe",
+          "website still under development, maybe :\ ",
           "contact link below, lets talk",
         ];
 
