--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         // Commands that will be typed out
         const commands = [
           "hello world!",
-          "website still under development, maybe :\ ",
+          "website still under development, maybe ;D ",
           "contact link below, lets talk",
         ];
 
