--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
       <div class="terminal-content">
         <div class="terminal-line">
-          <span class="terminal-prompt">lethusang@terminal:~$</span>
+          <span class="terminal-prompt">lethusang@web:~$</span>
           <span class="terminal-command" id="typing-command"></span>
           <span class="cursor">_</span>
         </div>
